@@ -13,6 +13,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Fixed a bug in the admindb interface that could apply a moderator
+      action to a message not displayed.  Bug #533468.
+
     - Added a traceback to the log message produced when processing the
       digest.mbox throws an exception.
 
